corpus/foreach.txt
=========
Foreach 1
=========

foreach i = 0...5 in
  def Foo#i;

---

(source_file
  (foreach
    (foreach_iterator
      (tok_identifier)
      (range_piece
        (range
          (value
            (tok_integer
              (decimal_integer)))
          (value
            (tok_integer
              (decimal_integer))))))
    (def
      (value
        (tok_identifier)
        (tok_identifier))
      (record_body))))

=========
Foreach 2
=========

foreach i = 0...5 in {
  def Foo#i;
}

---

(source_file
  (foreach
    (foreach_iterator
      (tok_identifier)
      (range_piece
        (range
          (value
            (tok_integer
              (decimal_integer)))
          (value
            (tok_integer
              (decimal_integer))))))
    (def
      (value
        (tok_identifier)
        (tok_identifier))
      (record_body))))

=========
Foreach 3
=========

foreach i = Constant.A ... Constant.B in {
  def Foo#i;
}

---

(source_file
  (foreach
    (foreach_iterator
      (tok_identifier)
      (range_piece
        (range
          (value
            (tok_identifier)
            (value_suffix
              (tok_identifier)))
          (value
            (tok_identifier)
            (value_suffix
              (tok_identifier))))))
    (def
      (value
        (tok_identifier)
        (tok_identifier))
      (record_body))))
