corpus/preproc.txt
=========
Define
=========

#define Hello

---

(source_file
  (preproc_define
    (macro_name)))

=========
Simple ifdef
=========

#ifdef Hello
#endif

---

(source_file
  (preproc_ifdef
    (macro_name)))

=========
Ifdef with stuff
=========

#ifdef Hello
def x;
#endif

---

(source_file
  (preproc_ifdef
    (macro_name)
      (def
        (value
          (tok_identifier))
        (record_body))))

=========
Ifndef with else
=========

#ifndef Hello
def x;
#else
def y;
#endif

---

(source_file
  (preproc_ifdef
    (macro_name)
      (def
        (value
          (tok_identifier))
        (record_body))
    (preproc_else
      (def
        (value
          (tok_identifier))
        (record_body)))))

====
Intertwined if
====

class Foo {
#ifdef A
def Flub;
#else
def Florb;
#endif
}

---

(source_file
  (class
    (tok_identifier)
    (record_body
      (preproc_ifdef
        (macro_name)
        (def
          (value
            (tok_identifier))
          (record_body))
        (preproc_else
          (def
            (value
              (tok_identifier))
            (record_body)))))))